<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/choose_level"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/level_test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/test" />

        <Button
            android:id="@+id/level_easy_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/easy" />

        <Button
            android:id="@+id/level_normal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/normal" />

        <Button
            android:id="@+id/level_hard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard" />

    </LinearLayout>
</layout>